# cunet

./: CMakeLists.txt
lib/include/: CUNET.h
lib/include/Core/: CUDA.h  Memory.h  Tensor.h
lib/include/Layer/: Activations.h  Linear.h
lib/src/Core/: Memory.cu  MemoryDetail.h  TensorDetail.h
lib/src/Layer/: ActivationsDetail.h  LinearDetail.h
src/: TestModel.h  source.cu
